# pickPresence

./: .env  .env.example  .gitignore  AGENTS.md  pyproject.toml  requirements-detector.txt
.codex/: config.toml
detectors/: insightface_detector.py  real_detector.py  run_detector.sh
docs/: DECISIONS.md  MILESTONES.md  REPORT.md
docs/acceptance/: S01E09_180_diff_report.json  S01E09_180_diff_report.md  S01E09_180_focus_segments.json  S01E09_180_manual_review.json  S01E09_180_problem_segments.json  S01E09_180_timeline_baseline.json
pickpresence/: __init__.py  appearance.py  cli.py  clustering.py  detections.py  detector_runner.py  embeddings.py  identity.py  pipeline.py  provider_utils.py  reid.py
scripts/: audit_segments.py  build_reference_set.sh  compare_manual_review.py  compare_manual_review.sh  demo.sh  diagnose_segments.py  diagnose_segments.sh  inspect_segments.py  inspect_segments.sh  make_reference.py  make_reference_set.py  make_reference_template.py  run_m10_style_180.sh  run_m13_style_180.sh  run_m15_style_180.sh  setup_detector.sh  verify.sh  verify_pytest.py
tests/: test_cli.py  test_multi_reference.py  test_provider_utils.py  test_tools.py
tests/fixtures/: detections_target.json  detector_stub.py  fake_ffmpeg.py  multi_detections.json  reference_target.json  reference_track.json  sample_annotations.json  sample_face.ppm  sample_video.txt  track_first_detections.json
