[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pickpresence"
version = "0.1.0"
description = "Local video presence detection and clipping pipeline."
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Do not expect file_or_dir.*:UserWarning:argparse",
]
